--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,11 +8,11 @@
 }
 
 .cleardefaults (@value: none) {
-    -webkit-appearance:     @value;
-    -moz-appearance:        @value;
-    -ms-appearance:         @value;
-    -o-appearance:          @value;
-    appearance:             @value;
+    -webkit-appearance:     @value !important;
+    -moz-appearance:        @value !important;
+    -ms-appearance:         @value !important;
+    -o-appearance:          @value !important;
+    appearance:             @value !important;
 }
 
 .header() {
