--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,8 @@
 /* COLORS */
 @foreground: @black;
 @background: @white;
-@primary-color: @red;
-@accent-color: @blue;
+@primary-color: @cyan;
+@accent-color: @purple;
 @disabled-color: @grey;
 
 /* MIXINS */
